--- a/HeyJoshiii_Twitch.html
+++ b/HeyJoshiii_Twitch.html
@@ -510,12 +510,124 @@
 <section class="bg-dark-grey-twitch bg-opacity-75 text-center text-white text-opacity-75 p-5">
     <div class="container">
         <div>
-            <h2>Mein Streamplan (04.10.21 - 10.10.21)</h2>
+            <h2>Mein Streamplan</h2>
             <p class="fw-lighter">Der tagesaktuelle Streamplan ist auf meinem
                 <a href="https://discord.gg/ZvkFdkrGvM" class="text-dark-red" target="_blank">Discord</a> zu finden!</p>
         </div>
         <div>
             <div class="table-responsive">
+                <p class="lead">04.10.21 - 10.10.21</p>
+                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover mb-5">
+                    <thead>
+                    <tr>
+                        <th scope="col">Streamzeiten</th>
+                        <th scope="col">Montag</th>
+                        <th scope="col">Dienstag</th>
+                        <th scope="col">Mittwoch</th>
+                        <th scope="col">Donnerstag</th>
+                        <th scope="col">Freitag</th>
+                        <th scope="col">Samstag (jeweils 30Min später)</th>
+                        <th scope="col">Sonntag</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">06:00 - 07:30</th>
+                        <td>-</td>
+                        <td>Frühstücksstream</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">...</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Don't Starve Together (ab 14 Uhr)</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">15:00 - 16:30</th>
+                        <td>Transport Fever 2</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Subnautica Below Zero</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td>Don't Starve Together</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">16:30 - 18:00</th>
+                        <td>Transport Fever 2</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Rocket League</td>
+                        <td>Mario Kart 8 Deluxe </td>
+                        <td>Clash Royale</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">18:00 - 19:30</th>
+                        <td>Minecraft</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Knockout City</td>
+                        <td>Splatoon 2</td>
+                        <td>Mario Kart 8 Deluxe</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">19:30 - 21:00</th>
+                        <td>Minecraft</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Variabel</td>
+                        <td>-</td>
+                        <td>Splatoon 2</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">21:00 - 22:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Mario Party/Mario 3D Land</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">22:30 - 00:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Knockout City</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">00:00 - 01:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>FNAF</td>
+                        <td>-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <div class="table-responsive">
+                <p class="lead">11.10.21 - 18.10.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -552,7 +664,7 @@
                     </tr>
                     <tr>
                         <th scope="row">15:00 - 16:30</th>
-                        <td>Transport Fever 2</td>
+                        <td class="fst-italic">Ausfall</td>
                         <td>-</td>
                         <td>-</td>
                         <td>Subnautica Below Zero</td>
@@ -562,7 +674,7 @@
                     </tr>
                     <tr>
                         <th scope="row">16:30 - 18:00</th>
-                        <td>Transport Fever 2</td>
+                        <td class="fst-italic">Ausfall</td>
                         <td>-</td>
                         <td>-</td>
                         <td>Rocket League</td>
@@ -572,8 +684,8 @@
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
-                        <td>Minecraft</td>
-                        <td>-</td>
+                        <td class="fst-italic">Ausfall</td>
+                        <td>Transport Fever 2 (Ersatz)</td>
                         <td>-</td>
                         <td>Knockout City</td>
                         <td>Splatoon 2</td>
@@ -582,8 +694,8 @@
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
-                        <td>Minecraft</td>
-                        <td>-</td>
+                        <td class="fst-italic">Ausfall</td>
+                        <td>Minecraft (Ersatz)</td>
                         <td>-</td>
                         <td>Variabel</td>
                         <td>-</td>
@@ -623,6 +735,7 @@
                     </tbody>
                 </table>
             </div>
+        </div>
         </div>
     </div>
 </section>
