--- a/HeyJoshiii_Twitch.html
+++ b/HeyJoshiii_Twitch.html
@@ -832,6 +832,29 @@
     </div>
 </section>
 
+<!--Section 6-->
+<section class="p-5">
+    <div class="container">
+        <div class="d-flex justify-content-around text-center text-xl-start text-black-50 flex-wrap-reverse flex-xl-nowrap">
+            <img class="w-50" src="data/pictures/old_computer.jpg" alt="Bild von einem alten Computer">
+            <div class="ps-lg-4 lead">
+                <h2 class="no_margin_top">Meine Specs</h2>
+                <p class="justified_text"><b>Prozessor</b> - <a class="text-dark-red" href="https://www.amd.com/de/products/cpu/amd-ryzen-7-3700x" target="_blank">AMD Ryzen 7 3700x</a><br>
+                    <b>Grafikkarte</b> - <a class="text-dark-red" href="http://eu.palit.com/palit/vgapro.php?id=3458&lang=de" target="_blank">NVidia GeForce RTX 2080S GP OC</a><br>
+                    <b>Motherboard</b> - <a class="text-dark-red" href="https://de.msi.com/Motherboard/B450M-PRO-VDH-MAX/Overview" target="_blank">MSI B450M Pro-VDH Max</a><br>
+                    <b>Arbeitsspeicher</b> - <a class="text-dark-red" href="https://www.amazon.de/G-Skill-AEGIS-F4-3000C16D-16GISB-Memory-2x8GB/dp/B01HFR8R2S" target="_blank">G.Skill Aegis DIMM Kit 16GB, DDR4-3000</a><br>
+                    <b>Festplatte</b> - <a class="text-dark-red" href="https://www.kingston.com/germany/de/ssd/a2000-nvme-pcie-ssd" target="_blank">Kingston A2000 NVMe PCIe SSD 1TB, M.2</a><br>
+                    <b>Netzteil</b> - <a class="text-dark-red" href="https://www.bequiet.com/de/powersupply/1559" target="_blank">be quiet! Pure Power 11 500W ATX 2.4</a><br>
+                    <b>Gehäuse</b> - <a class="text-dark-red" href="https://www.bequiet.com/de/case/1720" target="_blank">be quiet! Pure Base 500 schwarz, schallgedämmt</a><br>
+                    <b>Mikrofon</b> - <a class="text-dark-red" href="https://www.amazon.de/gp/product/B088P2KKHS/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&psc=1">Elgato Wave 1</a><br>
+                    <b>Headset</b> - <a class="text-dark-red" href="https://www.amazon.de/gp/product/B00SAYCXWG/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1" target="_blank">Cloud II Gaming Headset</a><br>
+                    <b>Kamera</b> - <a class="text-dark-red" href="https://www.amazon.de/gp/product/B0748NCPN5/ref=ppx_yo_dt_b_asin_title_o04_s00?ie=UTF8&psc=1" target="_blank">Logitech Brio</a><br>
+                    <b>Capture Card</b> - <a class="text-dark-red" href="https://www.amazon.de/gp/product/B08D3PHT58/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&psc=1" target="_blank">ZasLuke Game Capture Card</a><br></p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!--Footer-->
 <footer class="p-4 bg-twitch-purple">
     <div class="container">
