--- a/HeyJoshiii_Sonstiges.html
+++ b/HeyJoshiii_Sonstiges.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="data/pictures/HeyJoshiii_Logo.png">
     <link rel="stylesheet" href="scss/main.css">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -11,7 +12,7 @@
 
 <!--Navbar-->
 <nav class="navbar navbar-expand-md bg-splatoon-green navbar-dark sticky-top">
-    <div class="container lead fw-bolder">
+    <div class="container lead fw-bolder flex-nowrap">
         <a href="index.html" class="navbar-brand">HeyJoshiii</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
