--- a/HeyJoshiii_Twitch.html
+++ b/HeyJoshiii_Twitch.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="data/pictures/HeyJoshiii_Logo.png">
     <link rel="stylesheet" href="scss/main.css">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
