--- a/HeyJoshiii_Buch.html
+++ b/HeyJoshiii_Buch.html
@@ -98,7 +98,7 @@
         <div class="row text-center">
             <div class="col-lg pb-lg-0">
                 <div class="card bg-super-light-grey mb-3 mb-lg-0">
-                    <img src="data/pictures/Vito_Bild_Website.png" alt="Bild von Vito" class="card-img-top">
+                    <!--<img src="data/pictures/Vito_Bild_Website.png" alt="Bild von Vito" class="card-img-top">-->
                     <div class="card-body">
                         <h5 class="card-title">Vito Florenzi</h5>
                         <p class="card-text">Vito ist der Hauptcharakter des Buches. Er ist ein 17-Jähriger Junge, der
@@ -112,7 +112,7 @@
             </div>
             <div class="col-lg pb-lg-0">
                 <div class="card bg-super-light-grey mb-3 mb-lg-0">
-                    <img src="data/pictures/Loni_Bild_Website.png" alt="Bild von Loni" class="card-img-top">
+                    <!--<img src="data/pictures/Loni_Bild_Website.png" alt="Bild von Loni" class="card-img-top">-->
                     <div class="card-body">
                         <h5 class="card-title">Apollonia Sophie Schütz (Loni)</h5>
                         <p class="card-text">Loni ist die beste Freundin von Vito. Sie ist 16, wohnt mit Vito in einer
@@ -127,7 +127,7 @@
             </div>
             <div class="col-lg pb-lg-0">
                 <div class="card bg-super-light-grey mb-3 mb-lg-0">
-                    <img src="data/pictures/Bild_fehlt_noch.png" alt="Bild von Jéan" class="card-img-top">
+                    <!--<img src="data/pictures/Bild_fehlt_noch.png" alt="Bild von Jéan" class="card-img-top">-->
                     <div class="card-body">
                         <h5 class="card-title">Jéan Babineaux</h5>
                         <p class="card-text">Jéan ist ein 16-Jähriger Franzose, der eine Internetfreundschaft mit Loni
