--- a/HeyJoshiii_Twitch.html
+++ b/HeyJoshiii_Twitch.html
@@ -557,40 +557,40 @@
                         <td>Transport Fever 2</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Subnautica Below Zero</td>
+                        <td class="fst-italic">Ausfall</td>
                         <td>Animal Crossing New Horizons</td>
                         <td>Don't Starve Together</td>
-                        <td>-</td>
+                        <td>Subnautica Below Zero (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">16:30 - 18:00</th>
                         <td>Transport Fever 2</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Rocket League</td>
+                        <td class="fst-italic">Ausfall</td>
                         <td>Mario Kart 8 Deluxe </td>
                         <td>Clash Royale</td>
-                        <td>-</td>
+                        <td>Rocket League (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Knockout City</td>
+                        <td class="fst-italic">Ausfall</td>
                         <td>Splatoon 2</td>
                         <td>Mario Kart 8 Deluxe</td>
-                        <td>-</td>
+                        <td>Knockout City (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Minecraft</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Variabel</td>
+                        <td class="fst-italic">Ausfall</td>
                         <td>-</td>
                         <td>Splatoon 2</td>
-                        <td>-</td>
+                        <td>Variabel (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">21:00 - 22:30</th>
