--- a/Buch.html
+++ b/Buch.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="HeyJoshiii_Twitch.html" class="nav-link">Twitch</a>
+                    <a href="Twitch.html" class="nav-link">Twitch</a>
                 </li>
                 <li class="nav-item">
-                    <a href="HeyJoshiii_Buch.html" class="nav-link">Buch</a>
+                    <a href="Buch.html" class="nav-link">Buch</a>
                 </li>
                 <li class="nav-item">
-                    <a href="HeyJoshiii_Sonstiges.html" class="nav-link">Sonstiges</a>
+                    <a href="Sonstiges.html" class="nav-link">Sonstiges</a>
                 </li>
             </ul>
         </div>
