--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="HeyJoshiii_Twitch.html" class="nav-link">Twitch</a>
+                    <a href="Twitch.html" class="nav-link">Twitch</a>
                 </li>
                 <li class="nav-item">
-                    <a href="HeyJoshiii_Buch.html" class="nav-link">Buch</a>
+                    <a href="Buch.html" class="nav-link">Buch</a>
                 </li>
                 <li class="nav-item">
-                    <a href="HeyJoshiii_Sonstiges.html" class="nav-link">Sonstiges</a>
+                    <a href="Sonstiges.html" class="nav-link">Sonstiges</a>
                 </li>
             </ul>
         </div>
@@ -78,9 +78,9 @@
                     <ul class="list-group list-group-flush collapse" id="interestList">
                         <li class="list-group-item"><span class="lead">Gaming</span><br>(obviously haha, eine
                             Liste meiner Spiele gibt's <span><a
-                                    class="text-dark-red" href=HeyJoshiii_Twitch.html#Gamesection>hier</a></span>)</li>
+                                    class="text-dark-red" href=Twitch.html#Gamesection>hier</a></span>)</li>
                         <li class="list-group-item"><span class="lead">Content-Creation</span><br>(Auf
-                            <span><a class="text-dark-red" href=HeyJoshiii_Twitch.html>Twitch</a></span> &
+                            <span><a class="text-dark-red" href=Twitch.html>Twitch</a></span> &
                             anderen Plattformen)</li>
                         <li class="list-group-item"><span class="lead">Programmieren</span><br>(lerne es noch
                             in der Uni & im Stream)</li>
@@ -128,7 +128,7 @@
                             Seit dem 19.11.2020 streame ich inzwischen auf Twitch. Erst war es eher aus Spaß an der
                             Freude, inzwischen ist es aber wirklich ein cooles Nebenprojekt geworden, welches ich auch
                             sicher auf lange Sicht verfolgen werde. Meinen Kanal findest du
-                            <span><a class="text-dark-red" href=HeyJoshiii_Twitch.html>hier</a></span>!
+                            <span><a class="text-dark-red" href=Twitch.html>hier</a></span>!
                         </p>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                                                           href="https://www.twitch.tv/joshis_krimskrams"
                                                           target="_blank">Zweitkanal</a>.</span>
                             Wenn du mehr über Vito's Leben und die Astralwelt erfahren willst, dann bist du
-                            <span><a class="text-dark-red" href=HeyJoshiii_Buch.html>hier</a></span> richtig!
+                            <span><a class="text-dark-red" href=Buch.html>hier</a></span> richtig!
                         </p>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                                                          href="https://twitter.com/BReady11913952"
                                                          target="_blank">B-Ready</a></span>. Genaueres über alle
                             anderen Projekte findet ihr <span><a class="text-dark-red"
-                                                                 href=HeyJoshiii_Sonstiges.html>hier</a></span> <3
+                                                                 href=Sonstiges.html>hier</a></span> <3
                         </p>
                     </div>
                 </div>
