--- a/Twitch.html
+++ b/Twitch.html
@@ -549,7 +549,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Don't Starve Together (ab 14 Uhr)</td>
+                        <td>Transport fever 2 (ab 14 Uhr)</td>
                         <td>-</td>
                     </tr>
                     <tr>
@@ -559,7 +559,7 @@
                         <td>-</td>
                         <td class="fst-italic">Ausfall</td>
                         <td>Animal Crossing New Horizons</td>
-                        <td>Don't Starve Together</td>
+                        <td>Minecraft</td>
                         <td>Subnautica Below Zero (Ersatz)</td>
                     </tr>
                     <tr>
@@ -569,7 +569,7 @@
                         <td>-</td>
                         <td class="fst-italic">Ausfall</td>
                         <td>Mario Kart 8 Deluxe </td>
-                        <td>Clash Royale</td>
+                        <td>Super Smash Bros Ultimate/Mario 3D World</td>
                         <td>Rocket League (Ersatz)</td>
                     </tr>
                     <tr>
@@ -599,7 +599,7 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Mario Party/Mario 3D Land</td>
+                        <td>Mario Party</td>
                         <td>-</td>
                     </tr>
                     <tr>
