--- a/Twitch.html
+++ b/Twitch.html
@@ -517,117 +517,6 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">04.10.21 - 10.10.21</p>
-                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover mb-5">
-                    <thead>
-                    <tr>
-                        <th scope="col">Streamzeiten</th>
-                        <th scope="col">Montag</th>
-                        <th scope="col">Dienstag</th>
-                        <th scope="col">Mittwoch</th>
-                        <th scope="col">Donnerstag</th>
-                        <th scope="col">Freitag</th>
-                        <th scope="col">Samstag (jeweils 30Min später)</th>
-                        <th scope="col">Sonntag</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">06:00 - 07:30</th>
-                        <td>-</td>
-                        <td>Frühstücksstream</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">...</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Transport fever 2 (ab 14 Uhr)</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">15:00 - 16:30</th>
-                        <td>Transport Fever 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td>Animal Crossing New Horizons</td>
-                        <td>Minecraft</td>
-                        <td>Subnautica Below Zero (Ersatz)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">16:30 - 18:00</th>
-                        <td>Transport Fever 2</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td>Mario Kart 8 Deluxe </td>
-                        <td>Super Smash Bros Ultimate/Mario 3D World</td>
-                        <td>Rocket League (Ersatz)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">18:00 - 19:30</th>
-                        <td>Minecraft</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td>Splatoon 2</td>
-                        <td>Mario Kart 8 Deluxe</td>
-                        <td>Knockout City (Ersatz)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">19:30 - 21:00</th>
-                        <td>Minecraft</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td>-</td>
-                        <td>Splatoon 2</td>
-                        <td>Variabel (Ersatz)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">21:00 - 22:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Mario Party</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">22:30 - 00:00</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>Knockout City</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">00:00 - 01:30</th>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>FNAF</td>
-                        <td>-</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div>
-            <div class="table-responsive">
                 <p class="lead">11.10.21 - 18.10.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
@@ -644,9 +533,9 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th scope="row">06:00 - 07:30</th>
+                        <th scope="row">12:00 - 13:30</th>
                         <td>-</td>
-                        <td>Frühstücksstream</td>
+                        <td>Programmieren(Unity)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -654,9 +543,9 @@
                         <td>-</td>
                     </tr>
                     <tr>
-                        <th scope="row">...</th>
+                        <th scope="row">13:30 - 15:00</th>
                         <td>-</td>
-                        <td>-</td>
+                        <td>Programmieren(Unity)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -665,7 +554,7 @@
                     </tr>
                     <tr>
                         <th scope="row">15:00 - 16:30</th>
-                        <td class="fst-italic">Ausfall</td>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>Subnautica Below Zero</td>
@@ -675,20 +564,20 @@
                     </tr>
                     <tr>
                         <th scope="row">16:30 - 18:00</th>
-                        <td class="fst-italic">Ausfall</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Rocket League</td>
-                        <td>Mario Kart 8 Deluxe </td>
+                        <td>-</td>
+                        <td>Minecraft</td>
+                        <td>Mario Kart 8 Deluxe</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td class="fst-italic">Ausfall</td>
-                        <td>Transport Fever 2 (Ersatz)</td>
-                        <td>-</td>
                         <td>Knockout City</td>
+                        <td>-</td>
+                        <td>Minecraft</td>
                         <td>Splatoon 2</td>
                         <td>-</td>
                         <td>-</td>
@@ -696,7 +585,118 @@
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td class="fst-italic">Ausfall</td>
-                        <td>Minecraft (Ersatz)</td>
+                        <td>Rocket League</td>
+                        <td>-</td>
+                        <td>Variabel</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">21:00 - 22:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">22:30 - 00:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">00:00 - 01:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <div class="table-responsive">
+                <p class="lead">19.10.21 - 26.10.21</p>
+                <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Streamzeiten</th>
+                        <th scope="col">Montag</th>
+                        <th scope="col">Dienstag</th>
+                        <th scope="col">Mittwoch</th>
+                        <th scope="col">Donnerstag</th>
+                        <th scope="col">Freitag</th>
+                        <th scope="col">Samstag</th>
+                        <th scope="col">Sonntag</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">12:00 - 13:30</th>
+                        <td>-</td>
+                        <td>Programmieren(Unity)</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">13:30 - 15:00</th>
+                        <td>-</td>
+                        <td>Programmieren(Unity)</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">15:00 - 16:30</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Subnautica Below Zero</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">16:30 - 18:00</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Minecraft</td>
+                        <td>Mario Kart 8 Deluxe</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">18:00 - 19:30</th>
+                        <td>Transport Fever 2</td>
+                        <td>Knockout City</td>
+                        <td>-</td>
+                        <td>Minecraft</td>
+                        <td>Splatoon 2</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">19:30 - 21:00</th>
+                        <td>Transport Fever 2</td>
+                        <td>Rocket League</td>
                         <td>-</td>
                         <td>Variabel</td>
                         <td>-</td>
