--- a/Twitch.html
+++ b/Twitch.html
@@ -539,8 +539,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Animal Crossing New Horizons (Ersatz)</td>
-                        <td>Subnautica Below Zero (Ersatz)</td>
+                        <td>Programmieren(Unity)</td>
+                        <td>Programmieren(Unity)</td>
                     </tr>
                     <tr>
                         <th scope="row">13:30 - 15:00</th>
@@ -549,8 +549,8 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
-                        <td>Minecraft (Ersatz)</td>
+                        <td>Animal Crossing New Horizons (Ersatz)</td>
+                        <td>Subnautica Below Zero (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">15:00 - 16:30</th>
@@ -559,7 +559,7 @@
                         <td>-</td>
                         <td class="fst-italic">Ausfall</td>
                         <td class="fst-italic">Ausfall</td>
-                        <td>Splatoon 2 (Ersatz)</td>
+                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
                         <td>Minecraft (Ersatz)</td>
                     </tr>
                     <tr>
@@ -579,8 +579,8 @@
                         <td>-</td>
                         <td class="fst-italic">Ausfall</td>
                         <td class="fst-italic">Ausfall</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>Splatoon 2 (Ersatz)</td>
+                        <td>Minecraft (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
