--- a/Twitch.html
+++ b/Twitch.html
@@ -517,7 +517,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">19.10.21 - 26.10.21</p>
+                <p class="lead">25.10.21 - 31.10.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -539,55 +539,55 @@
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>Programmieren(Unity)</td>
-                        <td>Programmieren(Unity)</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">13:30 - 15:00</th>
                         <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Programmieren(Unity)</td>
                         <td>Programmieren(Unity)</td>
                         <td>-</td>
                         <td>-</td>
-                        <td>-</td>
-                        <td>Animal Crossing New Horizons (Ersatz)</td>
-                        <td>Subnautica Below Zero (Ersatz)</td>
                     </tr>
                     <tr>
                         <th scope="row">15:00 - 16:30</th>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td>Mario Kart 8 Deluxe (Ersatz)</td>
-                        <td>Minecraft (Ersatz)</td>
+                        <td>Subnautica Below Zero</td>
+                        <td>Animal Crossing New Horizons</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">16:30 - 18:00</th>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td>Splatoon 2 (Ersatz)</td>
-                        <td>Minecraft (Ersatz)</td>
+                        <td>Minecraft</td>
+                        <td>Mario Kart 8 Deluxe</td>
+                        <td>-</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">18:00 - 19:30</th>
                         <td>Transport Fever 2</td>
                         <td>Knockout City</td>
                         <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
-                        <td class="fst-italic">Ausfall</td>
+                        <td>Minecraft</td>
+                        <td>Splatoon 2</td>
                         <td>-</td>
-                        <td>Rocket League (Ersatz)</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Rocket League</td>
+                        <td>Splatoon 2</td>
                         <td>-</td>
-                        <td class="fst-italic">Ausfall</td>
+                        <td>Rocket League</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -628,7 +628,7 @@
         </div>
         <div>
             <div class="table-responsive">
-                <p class="lead">25.10.21 - 31.10.21</p>
+                <p class="lead">01.11.21 - 07.11.21</p>
                 <table class="table table-bordered border-table-border-grey table-sm text-white text-opacity-75 table-hover">
                     <thead>
                     <tr>
@@ -656,10 +656,10 @@
                     <tr>
                         <th scope="row">13:30 - 15:00</th>
                         <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
                         <td>Programmieren(Unity)</td>
-                        <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>Programmieren(Unity)</td>
                         <td>-</td>
                         <td>-</td>
                     </tr>
@@ -696,9 +696,9 @@
                     <tr>
                         <th scope="row">19:30 - 21:00</th>
                         <td>Transport Fever 2</td>
-                        <td>Rocket League</td>
+                        <td>Splatoon 2</td>
                         <td>-</td>
-                        <td>Variabel</td>
+                        <td>Rocket League</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
