--- a/Sonstiges.html
+++ b/Sonstiges.html
@@ -107,11 +107,14 @@
                     <div class="carousel-item active">
                         <img src="data/pictures/Fanart_Wendy_Ronja.png" class="d-block w-100" alt="Wendy mit Abigail im Wald">
                     </div>
-                 <div class="carousel-item">
+                    <div class="carousel-item">
                         <img src="data/pictures/JoshiDrip_Darki.jpg" class="d-block w-100" alt="Joshi mit Drip">
                     </div>
                     <div class="carousel-item">
                         <img src="data/pictures/Fanart_Wendy_Ronja2.png" class="d-block w-100" alt="Traurige Wendy im Wald">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="data/pictures/FanArt_Shooper.png" class="d-block w-100" alt="Sexy Bild meines Namens">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselFanart" data-bs-slide="prev">
